--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@fluentui/react-components": "9.43.3",
     "@fluentui/react-datepicker-compat": "^0.4.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@microsoft/eslint-plugin-power-apps": "^0.2.6",
     "@types/node": "^18.8.2",
     "@types/powerapps-component-framework": "^1.3.4",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "clean-webpack-plugin": "^4.0.0",
